#186 - Corrects lateral spacing of secundary section to align with other sections for desktop

--- a/themes/main/src/sass/nacional.scss
+++ b/themes/main/src/sass/nacional.scss
@@ -187,6 +187,7 @@
     background-color: white;
     border: 0;
     padding-top: 0;
+    justify-content: space-between;
   }
 
   article{
